--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p>hii, i am shubham patel</p>
-    <p>hi</p>
-    hii
-    <p>hii , this code is chanded</p>
+    <div class="card">
+      <p>hi my name is shubham patel</p>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
