code can be change

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <div class="card">
       <p>hi my name is shubham patel</p>
     </div>
+    <div class="card">
+      <p>hi my name is shubham patel</p>
+    </div>
+    <div class="card">
+      <p>hi my name is shubham patel</p>
+    </div>
+    <div class="card">
+      <p>hi my name is shubham patel</p>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
